--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,7 +12,7 @@ amazon:
    access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
    secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
    region: us-east-2
-   bucket: dc-smokefree-bucket-<%= Rails.env %>
+   bucket: dc-smokefree-bucket
    public: true
 
 # Remember not to checkin your GCS keyfile to a repository
